[package]
name = "tide-cas"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
debug = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["std", "derive"] }
log = "0.4"
tonic = "0.8"
tonic-reflection = "0.6.0"
prost = "0.11"
prost-types = "0.11"
tokio = {version = "1.25", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net", "sync"]}
memmap2 = "0.5"
dashmap = "5.4"
env_logger = "0.10"
lazy_static = "1.4"
clap = {version = "4.1", features = ["cargo"]}

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tokio-test = "0.4"